[package]
name = "match_ipfs_uploader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.3.1"
chrono = "0.4.26"
http = "0.2.9"
image = "0.24.7"
image-builder = "1.0.0"
ipfs-api-backend-hyper = { version = "0.6.0", features = ["with-hyper-rustls"] }
lazy_static = "1.4.0"
reqwest = "0.11.20"
serde = { version = "1.0.188", features = ["derive"]}
serde_json = "1.0.105"
tokio = "1.32.0"
